--- a/modules/core/client/views/dashboard/condominium-service.client.view.html
+++ b/modules/core/client/views/dashboard/condominium-service.client.view.html
@@ -26,7 +26,7 @@
       <button class="btn btn-success" ng-click="vm.registerCondominiumServices();">Registrar servicios</button>   
     </div>
     <div class="alert alert-info" ng-show="vm.nosupply" style="color: #36b7e3">
-      <strong>Información!</strong> No hay suministros por registrar para:  {{ vm.condominium.name }}.
+      <strong>Información!</strong> No hay suministros por registrar.
     </div>
 </section> 	
 
