--- a/modules/core/client/views/dashboard/payment-register.client.view.html
+++ b/modules/core/client/views/dashboard/payment-register.client.view.html
@@ -3,7 +3,133 @@
     <h3>Registro de pagos</h3>
   </div>
 
-  
+	<div class="row">
+	  <div class="col-lg-6">
+	    <div class="input-group">
+        <label for="search">Buscar departamento:</label>
+	      <input type="text" id="search" class="form-control" placeholder="Ingresa el departamento" ng-model="vm.code"  ng-keypress="vm.searchDepartment($event)">
+	      <span class="input-group-btn">
+	        <button class="btn btn-secondary"type="button">
+	        	<i class="fa fa-search" aria-hidden="true"></i>
+	        </button>
+	      </span>
+	    </div>
+	  </div>
+    <div class="col-lg-3">
+      <div class="input-group">
+        <label for="year">Seleccionar año:</label>
+        <select id="year" class="form-control" ng-model="vm.yearSelected">
+          <option value="2016">2016</option>
+          <option value="2017">2017</option>
+          <option value="2018">2018</option>
+        </select>
+        <span class="input-group-btn">
+          <button class="btn btn-secondary"type="button">
+            <i class="fa fa-sort-desc" aria-hidden="true"></i>
+          </button>
+        </span>
+      </div>
+    </div>
+	  <div class="col-lg-3">
+	    <div class="input-group">
+        <label for="month">Seleccionar mes de facturación:</label>
+	      <select class="form-control" id="month" ng-model="vm.monthSelected">
+	      	<option value="{{ item.month }}" ng-repeat="item in vm.months">{{ item.name }}</option>
+	      </select>
+	      <span class="input-group-btn">
+	        <button class="btn btn-secondary"type="button">
+	        	<i class="fa fa-sort-desc" aria-hidden="true"></i>
+	        </button>
+	      </span>
+	    </div>
+	  </div>
+	</div>
+	<br/>
+	<div class="row" ng-show="vm.departments.length > 0">
+		<div class="col-lg-12">
+			<table class="table table-striped table-responsive">
+				<thead>
+					<th>Departamento</th>
+					<th>Piso</th>
+					<th>Torre</th>
+					<th>Acciones</th>
+				</thead>
+				<tbody>
+					<tr ng-repeat="item in vm.departments">
+						<td>{{ item.code }}</td>
+						<td>{{ item.floor }}</td>
+						<td>{{ item.tower.name }}</td>
+						<td><a href="#" data-toggle="modal" data-target="#Boleta" ng-click="vm.createBillHeader(item._id)">Ver detalle</a></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div> 
 </section> 	
 
+<div id="Boleta" class="modal fade" role="dialog">
+  <div class="modal-dialog modal-lg">
 
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Boleta mes de {{ vm.monthSelected }}</h4>
+      </div>
+      <div class="modal-body">
+        <div class="col-md-12">
+          <table class="table table-bordered text-center boleta">
+            <thead>
+              <th>Detalle</th>
+              <th>N° Suministro</th>
+              <th>Recibo</th>
+              <th>Cant. Dep afectados</th>
+              <th>Total</th>
+            </thead>
+            <tbody>
+              <tr ng-repeat="item in vm.items">
+                <td>{{ item.serviceName }}</td>
+                <td>{{ item.supplyCode }}</td>
+                <td>{{ item.amount }}</td>
+                <td>{{ item.qtyDivision }}</td>
+                <td>{{ item.totalAmount }}</td>
+              </tr>
+            </tbody>
+          </table>
+          Consumo de Agua
+          <table class="table table-bordered text-center boleta" style="padding:0px">
+            <thead>
+              <th>Detalle</th>
+              <th>Lectura Anterior</th>
+              <th>Lectura Actual</th>
+              <th>Recibo</th>
+              <th>Cant. Dep afectados</th>
+              <th>Total</th>
+            </thead>
+            <tbody>
+              <tr ng-repeat="item in vm.individuals">
+                <td>{{ item.serviceName }}</td>
+                <td></td>
+                <td>{{ item.consumed }}</td>
+                <td>{{ item.amount }}</td>
+                <td>{{ item.qtyDivision }}</td>
+                <td>{{ item.totalAmount }}</td>
+              </tr>
+            </tbody>
+          </table>
+		    <div class="col-md-12">
+	            <div class="col-md-12">
+	              <!-- <b>TOTAL: S/. {{ vm.total }}</b>  -->
+                <div class="col-md-3"></div>
+                <button class="btn btn-success btn-lg" ng-click="vm.pay()" style="float: right;">PAGAR</button>
+	            </div>
+	      	</div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+
+  </div>
+</div>
