--- a/modules/services/client/views/admin/form-service.client.view.html
+++ b/modules/services/client/views/admin/form-service.client.view.html
@@ -10,6 +10,12 @@
   <div class="col-md-12">
     <form name="vm.form.serviceForm" class="form-horizontal" ng-submit="vm.save(vm.form.serviceForm.$valid)" novalidate>
       <fieldset>
+        <div class="form-group" ng-hide="vm.authentication.user.roles != 'superadmin'">
+            <label class="control-label" for="name">Condominio</label>
+            <select ng-model="vm.service.condominium">
+                <option value="{{ item._id }}" data-ng-repeat="item in vm.condominiums">{{ item.name }}</option>
+            </select>
+        </div>
         <div class="form-group" show-errors>
           <label class="control-label" for="name">Nombre de servicio</label>
           <input name="name" type="text" ng-model="vm.service.name" id="name" class="form-control" placeholder="Nombre de servicio" required autofocus>
