--- a/modules/service_consumptions/client/views/admin/form-service_consumption.client.view.html
+++ b/modules/service_consumptions/client/views/admin/form-service_consumption.client.view.html
@@ -37,6 +37,7 @@
             <th>Servicio</th>
             <th>{{ vm.type }}</th>
             <th>Código de suministro</th>
+            <th ng-show="vm.individual">Lectura anterior</th>
             <th ng-show="vm.individual">Lectura actual</th>
             <th>Monto</th>
           </thead>
@@ -45,8 +46,14 @@
               <td>{{ item.serviceName }}</td>
               <td>{{ item.supplyDescription }}</td>
               <td>{{ item.supplyCode }}</td>
+              <td ng-show="vm.individual">
+                <span ng-show="!item.emptyLastConsume">{{ item.lastConsume }}</span>
+                <input type="text" class="form-control" name="" ng-model="item.lastConsume" ng-show="item.emptyLastConsume">
+              </td>
               <td ng-show="vm.individual"><input type="text" ng-model="item.consumed" class="form-control"></td>
-              <td><input type="text" ng-model="item.total" class="form-control"></td>
+              <td><input ng-show="!vm.individual" ="text" ng-model="item.total" class="form-control">
+                <span ng-show="vm.individual">{{ (item.consumed - item.lastConsume) * item.avgWaterSupply  }}</span>
+              </td>
             </tr>
           </tbody>
         </table>
