--- a/modules/services/client/views/admin/form-service.client.view.html
+++ b/modules/services/client/views/admin/form-service.client.view.html
@@ -30,6 +30,7 @@
             <option value=2>Grupal</option>
             <option value=3>Torre</option>
             <option value=4>Individual</option>
+            <option value=5>Personal de condominio</option>
           </select>
           <div ng-messages="vm.form.serviceForm.type.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Este campo es obligatorio.</p>
