--- a/modules/agreements/client/views/admin/form-agreement.client.view.html
+++ b/modules/agreements/client/views/admin/form-agreement.client.view.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group" ng-show="vm.towerId">
-          <label class="control-label" for="tower">Departamento</label>
+          <label class="control-label" for="tower">Departamentos ( {{ vm.departments.length }} )<span ng-show="vm.departments.length == 0"> No se encontraron departamentos</span></label>
           <select ng-model="vm.agreement.departmentId" class="form-control">
               <option value="{{ item._id }}" data-ng-repeat="item in vm.departments">{{ item.code }}</option>
           </select>
