--- a/modules/clients/client/views/admin/form-client.client.view.html
+++ b/modules/clients/client/views/admin/form-client.client.view.html
@@ -10,11 +10,11 @@
   <div class="col-md-12">
     <form name="vm.form.clientForm" class="form-horizontal" ng-submit="vm.save(vm.form.clientForm.$valid)" novalidate>
       <fieldset>
-        <div class="form-group" ng-show="!vm.authentication.user.condominium" ng-hide="vm.authentication.user.roles != 'superadmin'">
+        <div class="form-group">
             <label class="control-label" for="name">Administrador de condominio?</label>
             <input type="checkbox" name="" ng-model="vm.checked">
         </div>       
-        <div class="form-group" ng-show="vm.checked">
+        <div class="form-group" ng-show="vm.checked && !vm.authentication.user.condominium"">
             <label class="control-label" for="name">Condominio</label>
             <select ng-model="vm.client.condominium" class="form-control">
                 <option value="{{ item._id }}" data-ng-repeat="item in vm.condominiums">{{ item.name }}</option>
