--- a/modules/core/client/views/dashboard/condominium-service.client.view.html
+++ b/modules/core/client/views/dashboard/condominium-service.client.view.html
@@ -1,6 +1,6 @@
 <section>
   <div class="jumbotron text-center">
-    <h3>Registro de servicios de condominio</h3>
+    <h3>Registro de servicios globales (servicios o personal)</h3>
   </div>
 	<div class="form-group" ng-show="!vm.authentication.user.condominium">
 	    <label class="control-label" for="name">Condominio</label>
@@ -10,11 +10,11 @@
       </select>
 	</div>
     <div class="col-md-12" ng-show="vm.supplyCreator.length > 0">
-      <h2>Servicios de Condominio </h2>
+      <h2>Servicios Globales (Personal y condominio) </h2>
       <table class="table table-responsive">
         <thead>
           <th>Servicio</th>
-          <th>Identificador de suministro</th>
+          <th>Identificador de suministro / Descripción</th>
         </thead>
         <tbody>
           <tr ng-repeat="item in vm.supplyCreator">
