--- a/modules/service_consumptions/client/views/admin/form-service_consumption.client.view.html
+++ b/modules/service_consumptions/client/views/admin/form-service_consumption.client.view.html
@@ -30,6 +30,9 @@
       <li class="nav-item">
         <a class="nav-link" id="contact-tab" data-toggle="tab" href="#department" role="tab" aria-controls="contact" aria-selected="false" ng-click="vm.typeConsumption(4, 'Departamento')">Departamento</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#department" role="tab" aria-controls="contact" aria-selected="false" ng-click="vm.typeConsumption(5, 'Personal')">Personal</a>
+      </li>
     </ul>
     <div class="tab-content" id="myTabContent">
         <table class="table table-responsive table-striped">
