--- a/modules/core/client/views/dashboard/dashboard.client.view.html
+++ b/modules/core/client/views/dashboard/dashboard.client.view.html
@@ -8,8 +8,8 @@
       REGISTRO DE SUMINISTROS DE CONDOMINIO
     </div>
     <div class="col-sm-6 col-md-3">
-      <p><a ui-sref="payment-register" ><i class="fa fa-money fa-5x" aria-hidden="true"></i></a></p>
-      REGISTRO DE PAGOS / BOLETAS
+      <p><a ui-sref="payment-monthly" ><i class="fa fa-money fa-5x" aria-hidden="true"></i></a></p>
+      PAGO RÁPIDO 
     </div>
     <div class="col-sm-6 col-md-3">
       <p><a ui-sref="#" ><i class="fa fa-users fa-5x" aria-hidden="true"></i></a></p>
@@ -19,6 +19,13 @@
       <p><a ui-sref="#" ><i class="fa fa-archive fa-5x" aria-hidden="true"></i></a></p>
       LISTA DE CONTRATOS
     </div>
+
+  </div>
+  <div class="row text-center">
+    <div class="col-sm-6 col-md-3">
+      <p><a ui-sref="payment-register" ><i class="fa fa-money fa-5x" aria-hidden="true"></i></a></p>
+      REGISTRO DE PAGOS / BOLETAS
+    </div>    
   </div>
 
   <div class="alert alert-danger" role="alert" ng-show="vm.contract" style="color: #af4342">
