--- a/modules/core/client/views/dashboard/payment-register.client.view.html
+++ b/modules/core/client/views/dashboard/payment-register.client.view.html
@@ -318,10 +318,10 @@
       <div class="modal-footer">
         <div class="row">
           <div class="col-sm-3">
-            <input type="text" class="form-control" ng-model="vm.userpay"  ng-show="vm.header.status === 'Pending'">
+            <input type="text" class="form-control" ng-model="vm.userpay"  ng-show="vm.header.status === 'Pendiente'">
           </div>
           <div class="col-sm-3">
-            <button style="width: 100%;" type="button" class="btn btn-success" ng-click="vm.confirmAndPay()" id="pay" ng-show="vm.header.status === 'Pending'"> PAGAR</button>
+            <button style="width: 100%;" type="button" class="btn btn-success" ng-click="vm.confirmAndPay()" id="pay" ng-show="vm.header.status === 'Pendiente'"> PAGAR</button>
           </div>
           <div class="col-sm-6">
             <button type="button" class="btn btn-primary" data-dismiss="modal" id="close">CERRAR</button>
