hot fix no super admin model, hot fix validation client duplicity

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -44,9 +44,10 @@
 
   
     #printSection, #printSection * {
-      zoom: 97%;
+      zoom: 100%;
       visibility:visible;
       font-family: Californian;
+      font-size: 20px;
     }
 
     #printSection {
