--- a/modules/core/client/views/dashboard/payment-monthly.client.view.html
+++ b/modules/core/client/views/dashboard/payment-monthly.client.view.html
@@ -8,7 +8,13 @@
 		<div class="form-check">
 		    <input type="checkbox" class="form-check-input" id="allmonths" ng-model="vm.allmonths">
 		    <label class="form-check-label" for="allmonths">Todos los meses?</label>
-		</div>	 
+		</div>
+        <div class="form-group col-md-4 col-sm-12">
+            <label for="">Selecciona el año:</label>
+            <select name="" id="" class="form-control" ng-model="vm.yearSelected" ng-options="obj.text as obj.value for obj in vm.years" ng-change="vm.getTotals()">
+                
+            </select>
+        </div> 		 
 	    <div class="input-group">
 	        <label for="search">Buscar departamento:</label>
 		      <input type="text" id="search" class="form-control" placeholder="Ingresa el departamento" ng-model="vm.code"  ng-keypress="vm.searchDepartment($event)">
@@ -49,8 +55,8 @@
 				</td>
 				<td>
 					<label ng-show="item.status == 'Pagado' || item.total == 0 ">-</label>
-					<label ng-show="item.status == 'Refinanciamiento'">{{ item.differente }}</label>
-					<div ng-show="item.status == 'Pendiente'">{{ item.total - item.payed | number: 2 }}</div>
+					<label ng-show="item.status == 'Refinanciamiento'">{{ item.difference }}</label>
+					<div ng-show="item.status == 'Pendiente' && item.total > 0">{{ item.total - item.payed | number: 2 }}</div>
 				</td>
 				<td>
 					<label ng-show="item.total == 0">-</label>
