--- a/modules/service_consumptions/client/views/admin/form-service_consumption.client.view.html
+++ b/modules/service_consumptions/client/views/admin/form-service_consumption.client.view.html
@@ -2,18 +2,28 @@
   <div class="page-header">
     <h1>Registrar consumos</h1>
   </div>
-  <div class="form-group" ng-hide="vm.authentication.user.roles != 'superadmin'">
+  <div class="form-group col-md-3 col-sm-12" ng-hide="vm.authentication.user.roles != 'superadmin'">
       <label class="control-label" for="name">Condominio</label>
-      <select ng-model="vm.condominium">
+      <select ng-model="vm.condominium" class="form-control">
           <option value="{{ item._id }}" data-ng-repeat="item in vm.condominiums">{{ item.name }}</option>
       </select>
   </div>
-  <div class="form-group">
-    <label class="control-label" for="name">Indica el mes: </label>
-      <select ng-model="vm.month" ng-change="vm.initialize()">
-          <option value="{{ item.value }}" data-ng-repeat="item in vm.months">{{ item.name }}</option>
-      </select>
+
+  <div class="row">
+    <div class="form-group col-md-2 col-sm-12">
+        <label for="">Selecciona el año:</label>
+        <select name="" id="" class="form-control" ng-model="vm.yearSelected" ng-options="obj.text as obj.value for obj in vm.years" ng-change="vm.getTotals()">
+            
+        </select>
+    </div>        
+    <div class="form-group col-md-2 col-sm-12">
+      <label class="control-label" for="name">Indica el mes: </label>
+        <select ng-model="vm.month" ng-change="vm.initialize()" class="form-control">
+            <option value="{{ item.value }}" data-ng-repeat="item in vm.months">{{ item.name }}</option>
+        </select>
+    </div>    
   </div>
+
   <br/>
   <br/>
   <div ng-show="vm.month">
