--- a/modules/service_consumptions/client/views/admin/list-service_consumptions.client.view.html
+++ b/modules/service_consumptions/client/views/admin/list-service_consumptions.client.view.html
@@ -7,6 +7,12 @@
       </a>
     </h1>
   </div>
+  <div class="row">
+    <div class="form-group col-md-3">
+      <label for="year">Selecciona año:</label>
+        
+    </div>
+  </div>
   <table class="table table-responsive">
     <thead>
       <th>Año</th>
